# fs-dir-cache

./: Cargo.toml  README.md  flake.nix  justfile
.cargo/: config.toml
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml  flakehub-publish-tagged.yml
nix/: lib.nix
src/: main.rs  root.rs  test.rs  util.rs
src/root/: dot.rs  dto.rs
tests/: sanity.rs
