[package]
name = "fs-dir-cache"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "fs-dir-cache"
path = "src/main.rs"

[profile.dev]
debug = "line-tables-only"

[profile.release]
debug = "line-tables-only"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive", "env"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
