[package]
name = "fs-dir-cache"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A CLI tool for CIs and build scripts, making file system based caching easy and correct (locking, eviction, etc.) "
repository = "https://github.com/dpc/fs-dir-cache"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "fs-dir-cache"
path = "src/main.rs"

[profile.dev]
debug = "line-tables-only"

[profile.release]
debug = "line-tables-only"

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"

[dependencies]
anyhow = "1.0.75"
blake3 = "1.4.1"
chrono = { version = "0.4.26", features = ["serde", "clock"] }
clap = { version = "4.4.0", features = ["derive", "env"] }
convi = { version = "0.0.7", features = ["min_target_pointer_width_32"] }
fs2 = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.13.0"
